[IMP] io: adds function that prints in chunks of text = stream of thought

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ INTERPRETER := python
 all: run
 
 run:
-	$(INTERPRETER) $(NAME).py
+	@$(INTERPRETER) $(NAME).py
 
 init:
 	pip install -r requirements.txt
