--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Project specific
+*.init_done
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -122,7 +125,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-src/.env
+letschat/.env
 .venv
 env/
 venv/
