[IMP] monitoring: connected to LangSmith

--- a/jotdown/.env.exemple
+++ b/jotdown/.env.exemple
@@ -1,1 +1,5 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY=""
+LANGCHAIN_API_KEY=""
+# To have access to LangSmith monitoring
+LANGCHAIN_TRACING=""
+LANGCHAIN_PROJECT=""
