--- a/jotdown/.env.exemple
+++ b/jotdown/.env.exemple
@@ -1,5 +1,6 @@
 OPENAI_API_KEY=""
 LANGCHAIN_API_KEY=""
-# To have access to LangSmith monitoring
+
+# Monitor your API calls with LangSmith (optional)
 LANGCHAIN_TRACING=""
 LANGCHAIN_PROJECT=""
